// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-label-indicator #render should render component as expected (1) 1`] = `
<gux-form-field-label-indicator>
</gux-form-field-label-indicator>
`;

exports[`gux-form-field-label-indicator #render should render component as expected (2) 1`] = `
<gux-form-field-label-indicator variant="required" required="false">
</gux-form-field-label-indicator>
`;

exports[`gux-form-field-label-indicator #render should render component as expected (3) 1`] = `
<gux-form-field-label-indicator variant="required" required="true">
  <span class="gux-form-field-label-indicator-required" aria-hidden="true">
    *
  </span>
</gux-form-field-label-indicator>
`;

exports[`gux-form-field-label-indicator #render should render component as expected (4) 1`] = `
<gux-form-field-label-indicator variant="optional" required="false">
  <span class="gux-form-field-label-indicator-optional">
    (optional)
  </span>
</gux-form-field-label-indicator>
`;

exports[`gux-form-field-label-indicator #render should render component as expected (5) 1`] = `
<gux-form-field-label-indicator variant="optional" required="true">
</gux-form-field-label-indicator>
`;
